--- a/content/post/2100beta.md
+++ b/content/post/2100beta.md
@@ -12,39 +12,73 @@ title = "REVOLUTION|2 2.1.0.0 BETA Update!"
 
 +++
 
+Hello, everyone! Welcome to the REVOLUTION|2 Beta release!
 
-Hello, everyone! 
+It's been a long, hard month of testing and preparing, but we're finally ready to release the Beta of REVOLUTION|2. We still have more work to do, particularly in the HQM and mod-balance department; however, the pack is stable at this point, and any worlds you create (regardless of world type) should be compatible with new pack updates for a long time to come.
 
-### Changes
+Before I go any further, I need to take a moment to thank all the people who contributed content and/or support to this pack. They did an awesome job and REVOLUTION|2 wouldn't be here without them:
+- DaMachinator who contributed the custom bees and physics updates, and frequently answers bug reports and questions on the issue tracker and IRC.
+- DorinnB for his beautiful work on the Recurrent Complex world structures.
+- Solego's excellent noob guides and hard work on the HQM quests.
+- NachtRaben, SerenityGene, Toksyuryel, DragGon7601, soleplayer, and the entire host of players on the #Revolution channel.
+
+Stay tuned. There's still more content and surprises coming to REVOLUTION|2!
+
+### Known Issues
+- Linux users with Gun Customization texture problems should take a look at this [issue](https://github.com/Haggle1996/RevolutionPack/issues/180) for a workaround. 
+
+### Noteworthy Changes
 - ReactorCraft ores (fluorite, calcite, etc) no longer spawn in the overworld, but are found in quantity on the moon and mars.  
 - More entries in the noob guide, thanks to Solego. You can access the guide by opening your inventory window, then clicking on the upper book to the left of the window.
 - Recurrent Complex structures, courtesy of Dorinn Bloodforge and Pterodactlol, have been added.  
 - Doubled the default spawn rate of copper. It is still rare, but more common than before.
-- Increased the Spice of Life food list length to 30; for the most part, this change makes early food less useful than later food (feasts). 
+- Increased the Spice of Life food list length to 30; for the most part, this change makes early food less useful with minimal impact to end-game food. 
 - Blood moon has been reduced from a 100% chance to only 5%; however, you can no longer sleep through it. Spawn rates are increased 300% but monsters despawn at morning.
 - No more ridiculous villager food trades (e.g., 64 feasts for 1 emerald).
 - Reduced frequency of guns and ammo in chests.
 - HarvestCraft seeds can only be made through AgriCraft mutation and propagation.
 - Increased mutation probabability of crops by 50%
+- Better Rain mod renamed to Dynamic Surroundings. Not a change, per-se, but noteworthy, as the mod adds a lot more content.
+- Added MapWriter 2 as a second minimap option
+- Added first part of Custom Bees thanks to DaMachinator!!
+- Updated the Roguelike towers to look more like modern structures. 
+- Made roguelike dungeon loot more generous, because it's a great way to tempt players to their death. (Shh...secret...dungeons are optional)
 
 ### Bugs Squashed
 - Copper ore flowers no longer spawn everywhere (only when there's copper). This was due to a Harder Ores issue.
 - You should now be able to milk cows using wooden buckets.
 - Skin textures glitching after death should be fixed now.
+- World generation is significantly faster
+- You should now always start on or very close to a continent, instead of floating in the ocean.
 
 ### Added Mods
+[MapWriter 2](http://minecraft.curseforge.com/projects/mapwriter-2)  
 
 ### Updated Mods
-[WoodenBuckets-1.7.10-0.0.3b8](http://minecraft.curseforge.com/mc-mods/233189-mod/files/2276336)  
-[BetterRain-1.7.10-1.0.2.5 BETA](http://minecraft.curseforge.com/mc-mods/238891-mod/files/2276538)  
-[FTBUtilities-1.7.10-1.0.15.1](http://minecraft.curseforge.com/projects/ftb-utilities/files/2276982)  
-[FTBLib-1.7.10-1.0.15](http://minecraft.curseforge.com/mc-mods/237167-mod/files/2276588)  
+[AppleCore-mc1.7.10-1.3.0](http://minecraft.curseforge.com/mc-mods/224472-mod/files/2277393)
+[BetterFoliage-MC1.7.10-2.0.3](http://minecraft.curseforge.com/mc-mods/228529-mod/files/2279141)    
+[CoFHCore-1.7.103.1.0-323](http://minecraft.curseforge.com/mc-mods/69162-mod/files/2277478)  
+[ClimateControl-0.4.beta38](http://minecraft.curseforge.com/mc-mods/76544-mod/files/2277392)  
+[defaultkeys-mc1.7.10-1.0.28](http://minecraft.curseforge.com/mc-mods/232131-mod/files/2277197)  
+[DynamicSurroundings-1.7.10-1.0.4.1 BETA](http://minecraft.curseforge.com/mc-mods/238891-mod/files/2279139)
+[ExtraCells-1.7.10-2.3.8](http://minecraft.curseforge.com/mc-mods/229218-mod/files/2279025)  
+[FastCraft 1.22-ctest18](http://forum.industrial-craft.net/index.php?page=Thread&amp;threadID=10820)  
+[FTBUtilities-1.7.10-1.0.16](http://minecraft.curseforge.com/mc-mods/237102-mod/files/2277331)  
+[FTBLib-1.7.10-1.0.16](http://minecraft.curseforge.com/mc-mods/237167-mod/files/2277330)  
+[Forestry 4.2.6](http://minecraft.curseforge.com/mc-mods/59751-mod/files/2278964)  
+[Galacticraft 1.7.10-3.0.12.429](http://micdoodle8.com/mods/galacticraft)  
+[Galaxy Space 1.0.5](http://minecraft.curseforge.com/mc-mods/238770-mod/files/2277067)  
+[Headcrumbs-1.7.3](http://minecraft.curseforge.com/mc-mods/222838-mod/files/2277144)  
 [IGW-Mod-1.7.10-1.1.12-34-universal](http://minecraft.curseforge.com/mc-mods/223815-mod/files/2276684)  
-[Rockhounding Mod v3.22](http://minecraft.curseforge.com/mc-mods/226943-mod/files/2276194)  
+[ModularPowersuits-0.11.0.300](http://minecraft.curseforge.com/mc-mods/235442-mod/files/2278886)
+[PneumaticCraft-1.7.10-1.12.5-148-universal](http://minecraft.curseforge.com/mc-mods/224125-mod/files/2279020)    
+[Realistic Terrain Generation 0.5.0-RC2](https://github.com/Team-RTG/Realistic-Terrain-Generation)  
+[rftools-4.21](http://minecraft.curseforge.com/mc-mods/224641-mod/files/2278966)  
+[Rockhounding Mod v3.23b](http://minecraft.curseforge.com/mc-mods/226943-mod/files/2277607)  
+[SpiceOfLife-mc1.7.10-1.3.1](http://minecraft.curseforge.com/mc-mods/220811-mod/files/2277396)  
 [StorageDrawers-1.7.10-1.7.7](http://minecraft.curseforge.com/mc-mods/223852-mod/files/2276653)  
 [TIS-3D-MC1.7.10-0.8.2.62](http://minecraft.curseforge.com/mc-mods/238603-mod/files/2276283)  
-[Galacticraft 1.7.10-3.0.12.429](http://micdoodle8.com/mods/galacticraft)  
-[Realistic Terrain Generation 0.5.0-RC2](https://github.com/Team-RTG/Realistic-Terrain-Generation)  
+[WoodenBuckets-1.7.10-0.0.3b8](http://minecraft.curseforge.com/mc-mods/233189-mod/files/2276336)  
 
 ### Removed Mods
 None!  
