--- a/content/post/2710.md
+++ b/content/post/2710.md
@@ -21,7 +21,7 @@ Volcanoes have also been re-enabled in world gen, now that RTG finally supports 
 
 ### Pack Changes
 - Increased frequency of ReactorCraft ores in the Cave dimension.
-- Hives (including the Ender Hive) can be created through Botania Mana Alchemy. You can scoop up hives by crafting a Scooperator MX200 (from Gendustry) and right-clicking a hive (not left-clicking).
+- Hives (including the Ender Hive) can be created through Botania Mana Alchemy. You can scoop up hives by crafting a Scooperator MX200 (from Gendustry) and shift+right-clicking a hive (not left-clicking).
 
 ### Bugs Squashed
 - NASA workbench recipe adjusted to use vanilla and compatible crafting tables. Fixes [#422](https://github.com/Haggle1996/RevolutionPack/issues/422)
